@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: Filtering by `_score` wasn't recognized on group-by queries.
+
  - Fix: Do not shutdown the BulkShardProcessor while there are pending requests
    anymore
 
